# rust_call_bot

./: Cargo.toml  README.md  example_secrets.toml
src/: lib.rs  main.rs
